// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card does not error check malformed link 1`] = `
<div
  className="card twoColumn leftAligned noImage"
  id="card"
>
  <a
    onClick={[Function]}
    style={Object {}}
    target="_self"
  >
    <img
      alt="kitten"
      className="itemImage"
      id="image-4-0"
      src="https://placekitten.com/588/364"
    />
  </a>
  <div
    className="content"
  >
    <h4
      className="itemTitle"
      id="title"
    >
      <a
        className="unstyledLink"
        onClick={[Function]}
        style={Object {}}
        target="_self"
      >
        Kitten
      </a>
    </h4>
    <div>
      <hr
        className="dash"
        id="hr-4-0"
        style={
          Object {
            "width": "1.667rem",
          }
        }
      />
      <p
        className="itemSubTitle"
        id="subtitle-text-4-0"
      >
        A kitten, also known as a kitty or kitty cat, is a juvenile cat
      </p>
    </div>
  </div>
  <a
    onClick={[Function]}
    style={Object {}}
    target="_self"
  >
    dogs
  </a>
</div>
`;

exports[`Card to render correctly 1`] = `
<div
  className="card twoColumn leftAligned noImage"
  id="card"
>
  <a
    href="https://en.wikipedia.org/wiki/Kitten"
  >
    <img
      alt="kitten"
      className="itemImage"
      id="image-4-0"
      src="https://placekitten.com/588/364"
    />
  </a>
  <div
    className="content"
  >
    <h4
      className="itemTitle"
      id="title"
    >
      <a
        className="unstyledLink"
        href="https://en.wikipedia.org/wiki/Kitten"
      >
        Kitten
      </a>
    </h4>
    <div>
      <hr
        className="dash"
        id="hr-4-0"
        style={
          Object {
            "width": "1.667rem",
          }
        }
      />
      <p
        className="itemSubTitle"
        id="subtitle-text-4-0"
      >
        A kitten, also known as a kitty or kitty cat, is a juvenile cat
      </p>
    </div>
  </div>
  <a
    href="https://en.wikipedia.org/wiki/Kitten"
  >
    Learn more about kittens
  </a>
</div>
`;

exports[`Card to render correctly if the link is just a string 1`] = `
<div
  className="card twoColumn leftAligned noImage"
  id="card"
>
  <a
    onClick={[Function]}
    style={Object {}}
    target="_self"
  >
    <img
      alt="kitten"
      className="itemImage"
      id="image-4-0"
      src="https://placekitten.com/588/364"
    />
  </a>
  <div
    className="content"
  >
    <h4
      className="itemTitle"
      id="title"
    >
      <a
        className="unstyledLink"
        onClick={[Function]}
        style={Object {}}
        target="_self"
      >
        Kitten
      </a>
    </h4>
    <div>
      <hr
        className="dash"
        id="hr-4-0"
        style={
          Object {
            "width": "1.667rem",
          }
        }
      />
      <p
        className="itemSubTitle"
        id="subtitle-text-4-0"
      >
        A kitten, also known as a kitty or kitty cat, is a juvenile cat
      </p>
    </div>
  </div>
  <a
    onClick={[Function]}
    style={Object {}}
    target="_self"
  >
    Learn more
  </a>
</div>
`;

exports[`Card to render correctly with null link 1`] = `
<div
  className="card twoColumn leftAligned noImage"
  id="card"
>
  <img
    alt="kitten"
    className="itemImage"
    id="image-4-0"
    src="https://placekitten.com/588/364"
  />
  <div
    className="content"
  >
    <h4
      className="itemTitle"
      id="title"
    >
      Kitten
    </h4>
    <div>
      <hr
        className="dash"
        id="hr-4-0"
        style={
          Object {
            "width": "1.667rem",
          }
        }
      />
      <p
        className="itemSubTitle"
        id="subtitle-text-4-0"
      >
        A kitten, also known as a kitty or kitty cat, is a juvenile cat
      </p>
    </div>
  </div>
</div>
`;
